--- a/q01/nginx.yaml
+++ b/q01/nginx.yaml
@@ -1,20 +1,18 @@
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: lab-development
-  namespace: qq2
+  name: nginx
   labels:
-    app: lab-development
+    app: nginx
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
-      app: lab-development
+      app: nginx
   template:
     metadata:
       labels:
-        app: lab-development
+        app: nginx
     spec:
       containers:
       - name: nginx
