--- a/q03/3.yaml
+++ b/q03/3.yaml
@@ -1,1 +1,23 @@
 
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: nginx-development
+  namespace: qq3
+  labels:
+    app: nginx-development
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: nginx-development
+  template:
+    metadata:
+      labels:
+        app: nginx-development
+    spec:
+      containers:
+      - name: nginx
+        image: nginx:1.14.2
+        ports:
+        - containerPort: 80
