--- a/q05/5.yaml
+++ b/q05/5.yaml
@@ -1,1 +1,14 @@
-
+apiVersion: v1
+kind: Pod
+metadata:
+  creationTimestamp: null
+  labels:
+    run: limit
+  name: limit
+  namespace: qq3
+spec:
+  containers:
+    - image: redis
+      name: redis
+    - image: nginx
+      name: nginx
