--- a/q05/5.yaml
+++ b/q05/5.yaml
@@ -1,1 +1,21 @@
-
+apiVersion: v1
+kind: Pod
+metadata:
+  name: nginx
+  namespace: qq3
+spec:
+  containers:
+  - name: nginx
+    image: nginx
+    resources:
+      requests:
+        cpu: 100m
+      limits:
+        cpu: 100m
+  - name: redis
+    image: redis
+    resources:
+      requests:
+        cpu: 100m
+      limits:
+        cpu: 100m
