--- a/q03/3.yaml
+++ b/q03/3.yaml
@@ -1,1 +1,24 @@
+#Q1: Create a deployment named nginx in the qq2 namespace using the nginx image with 3 replicas
 
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: nginx-deployment
+  labels:
+    app: nginx
+  namespace: qq3
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: nginx
+  template:
+    metadata:
+      labels:
+        app: nginx
+    spec:
+      containers:
+      - name: nginx
+        image: nginx:alpine
+        ports:
+        - containerPort: 80
