--- a/q05/5.yaml
+++ b/q05/5.yaml
@@ -1,1 +1,25 @@
-
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: limit
+  labels:
+    app: limit
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: limit
+  template:
+    metadata:
+      labels:
+        app: limit
+    spec:
+      containers:
+      - name: redis
+        image: redis:alpine3.20
+        ports:
+        - containerPort: 81
+      - name: nginx
+        image: nginx:alpine
+        ports:
+        - containerPort: 80
