--- a/q04/4.yaml
+++ b/q04/4.yaml
@@ -1,1 +1,28 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: programming
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: python-deployment
+  namespace: programming
+  labels:
+    app: python
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: python
+  template:
+    metadata:
+      labels:
+        app: python
+    spec:
+      containers:
+      - name: python
+        image: python:3.9.20-slim-bullseye
+        ports:
+        - containerPort: 9797
 
