--- a/q05/5.yaml
+++ b/q05/5.yaml
@@ -1,1 +1,16 @@
+apiVersion: v1
+kind: Pod
+metadata:
+  name: limit
+  namespace: qq3
+spec:
+  containers:
+  - name: redis
+    image: redis
+    ports:
+    - containerPort: 6379
+  - name: nginx
+    image: nginx
+    ports:
+    - containerPort: 80
 
