--- a/q02/2.yaml
+++ b/q02/2.yaml
@@ -1,1 +1,21 @@
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: lab-deployment
+  namespace: qq2
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: lab-nginx
+  template:
+    metadata:
+      labels:
+        app: lab-nginx
+    spec:
+      containers:
+      - name: nginx
+        image: nginx:1.14.2
+        ports:
+        - containerPort: 80
 
