--- a/q05/5.yaml
+++ b/q05/5.yaml
@@ -1,1 +1,13 @@
+apiVersion: v1
+kind: Pod
+metadata:
+  name: limit
+  namespace: qq3
+spec:
+  containers:
+  - name: redis
+    image: redis
+    resources:
+  - name: nginx
+    image: nginx
 
