--- a/q07/7.yaml
+++ b/q07/7.yaml
@@ -1,4 +1,3 @@
-
 apiVersion: v1
 kind: Namespace
 metadata:
@@ -10,22 +9,22 @@ metadata:
   name: app01
   namespace: prod
   labels:
-    app: nginx
+    app: app01
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: nginx
+      app: app01
   template:
     metadata:
       labels:
-        app: nginx
+        app: app01
     spec:
       containers:
-      - name: nginx
-        image: nginx:latest
-        ports:
-        - containerPort: 80
+        - name: nginx
+          image: nginx:latest
+          ports:
+          - containerPort: 80
 ---
 apiVersion: v1
 kind: Service
@@ -33,9 +32,8 @@ metadata:
   name: app01-svc
   namespace: prod
 spec:
-  type: NodePort
   selector:
-    app.kubernetes.io/name: nginx
+    app: app01
   ports:
     - protocol: TCP
       port: 80
